--- a/front-end/src/layout/Layout.css
+++ b/front-end/src/layout/Layout.css
@@ -1,4 +1,9 @@
 .side-bar {
   background-color: #393a44;
   min-width: 200px;
+  height: auto;
+}
+
+body {
+  background-color: rgb(197, 192, 192);
 }
